--- a/src/styles/_app.css
+++ b/src/styles/_app.css
@@ -1,5 +1,5 @@
 .appWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-auto-flow: row;
+  width: 100%;
 }
